2008-10-08  Mike Gorse  <mgorse@novell.com>

	* atk/Object.custom: Pass Handle in EmitChildrenChanged (fix critical)

2008-10-24  Mike Kestner  <mkestner@novell.com>

	* glib/GType.cs: register IntPtr.

2008-10-22  Peter Johanson  <peter@peterjohanson.com>

	* gtk/TreeModelAdapter.custom:
	* gtk/TreeModelFilter.custom:
	* gtk/TreeModelSort.custom:
	* gtk/TreeStore.custom: Don't trigger any gtk+ critical
	warnings when the 'rows-reodered' signal is fired.

2008-10-21  Mike Kestner  <mkestner@novell.com>

	* tagged 2.12.5.

2008-10-21  Mike Kestner  <mkestner@novell.com>

	* cairo/*: add a policy assembly for 1.0 defering to 2.0.

2008-10-13  Brad Taylor  <brad@getcoded.net>

	* Makefile.am:
	* configure.in.in:
	* gtk-sharp-2.0-lib.wxs.in:
	* gtk-sharp-2.0-dev.wxs.in: Replace version numbers in wxs files,
	  import gtk-sharp-2.0-dev.wxs.

2008-10-13  Mike Kestner  <mkestner@novell.com>

	* Makefile.am: installer target
	* gtk-sharp-2.0-lib.wxs: new installer config file

2008-10-12  Andrés G. Aragoneses  <aaragoneses@novell.com>

	Fixes BNC#426876.
	* generator/InterfaceGen.cs: throw ArgumentNullException in
	the Adapter's constructor that receives an implementor.

2008-10-09  Mike Kestner  <mkestner@novell.com>

	* cairo/*.cs: flatten source hierarchy to simplify win32 build.
	* sample/Makefile.am: fix a ref issue with local cairo.

2008-10-09  Mike Kestner  <mkestner@novell.com>

	* configure.in.in: magic for local Mono.Cairo build.
	* cairo/*: a local build of Mono.Cairo for .Net-only builds on win32.
	* */Makefile.am: use local Mono.Cairo where necessary.

2008-10-09  Mike Kestner  <mkestner@novell.com>

	* configure.in.in: kill dead config.in.
	* sample/CairoSample.cs: some dispose handling and cleanup.
	* sample/cairo-sample.exe.config.in: kill, no pinvoke needed now.
	* sample/GException.cs: GException test sample.
	* sample/GtkCairo.cs: kill, replaced by Gdk.CairoHelper.Create.
	* sample/Makefile.am: cleanup.

2008-10-08  Mike Gorse  <mgorse@novell.com>
