@@ -1,3 +1,8 @@
+2008-10-27  Stephane Delcroix  <sdelcroix@novell.com>
+
+	* glib/ListBase.cs: DataMarshal: create the right object for *Adapter
+	list items.
+
 2008-10-08  Mike Gorse  <mgorse@novell.com>
 
 	* atk/Object.custom: Pass Handle in EmitChildrenChanged (fix critical)
